--- a/globe1.html
+++ b/globe1.html
@@ -21,7 +21,7 @@
 <body>
     <div id="globeViz"></div>
 
-    <script src="//unpkg.com/globe.gl"></script>
+    <script src="https://unpkg.com/globe.gl"></script>
     <script>
         const myDOMElement = document.getElementById('globeViz');
 
@@ -29,7 +29,7 @@
         const myGlobe = Globe()(myDOMElement);
         
         // Use a basic globe image for visualization (you can change this URL to another image if preferred)
-        const myImageUrl = '//unpkg.com/three-globe/example/img/earth-night.jpg';
+        const myImageUrl = 'https://unpkg.com/three-globe/example/img/earth-night.jpg';
         
         const myLabelData = [
     { lat: 52.3676, lng: 4.9041, text: "Amsterdam" },
